--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
 	"name": "ayna-ui",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"description": "A React UI library.",
-	"main": "src/index.ts",
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
 	"files": [
 		"src/**/*"
 	],
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"build": "tsc --declaration --emitDeclarationOnly"
 	},
 	"repository": {
 		"type": "git",
