--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,8 @@
   "extends": "@tsconfig/recommended/tsconfig.json",
   "compilerOptions": {
     "jsx": "preserve",
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "declaration": true
   }
 }
