--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "@tsconfig/recommended": "^1.0.7",
     "@types/css-modules": "^1.0.5",
     "@types/react": "^18.3.3",
-    "storybook": "^8.2.8"
+    "@vitejs/plugin-react": "^4.3.1",
+    "storybook": "^8.2.8",
+    "vite": "^5.4.0"
   }
 }
